<resources>
    <string name="app_name">松小堡</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="i_see">知道了</string>
    <string name="ignore">忽略</string>
    <string name="proceed">继续</string>
    <string name="being_not">暂不</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="save_ok">保存成功</string>
    <string name="my_new">新建</string>
    <string name="add">添加</string>
    <string name="all">全部</string>
    <string name="select_all">全选</string>
    <string name="total">合计：</string>
    <string name="item_price">价格：</string>
    <string name="item_number">数量：</string>
    <string name="item_select_no">请选择：</string>
    <string name="item_select_ok">已选择：</string>
    <string name="recommend">推荐</string>
    <string name="login">登录</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="clean">清除</string>
    <string name="done">完成</string>
    <string name="desc">""</string>
    <string name="dot">・</string>
    <string name="sign_semicolon">：</string>
    <string name="time_divided">:</string>
    <string name="multiplication">×</string>
    <string name="explain">说明：</string>
    <string name="other">其他：</string>
    <string name="suit">适用：</string>
    <string name="time">时间：</string>
    <string name="place">地点：</string>
    <string name="number_p">人数：</string>
    <string name="number_0">0</string>
    <string name="price_00">0.00</string>
    <string name="num_total">共%1$d件</string>
    <string name="prompt">操作提示</string>
    <string name="delete">删除</string>
    <string name="delete_pain">忍痛删了</string>
    <string name="delete_think">我再想想</string>
    <string name="delete_confirm">&#160;确定要删除么？</string>
    <string name="leave_confirm">去意已决</string>
    <string name="abandon_confirm">确定放弃？</string>
    <string name="send_confirm">确认发送</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="send">发送</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="must_fill">必填</string>
    <string name="not_empty">不能为空</string>
    <string name="setting">设置</string>
    <string name="error">错误</string>
    <string name="post">发布</string>
    <string name="title">标题</string>
    <string name="undo">复原</string>
    <string name="redo">重做</string>
    <string name="edit">编辑</string>
    <string name="unfold">展开</string>
    <string name="put_away">收起</string>
    <string name="rmb">￥</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="toast_exit_prompt">再按一次退出程序</string>
    <string name="toast_server_busy">服务器繁忙 (T_T)\n请稍后再试 (T_T)</string>
    <string name="toast_error_data_app">应用数据出错 (T_T)\n请重启此应用 (T_T)</string>
    <string name="toast_error_data_page">页面出现错误 (T_T)\n正在刷新页面 (T_T)</string>
    <string name="dialog_version_new">当前版本已是最新版本</string>
    <string name="dialog_version_update">检测到新版本\n确定开始更新</string>
    <string name="dialog_version_update_force">当前版本低于最低版本！\n需升级后才能正常使用！</string>
    <string name="dialog_error_msg">发生错误，请稍后再尝试</string>
    <string name="dialog_error_video_url">视频出现错误，无法播放</string>
    <string name="network">网络</string>
    <string name="network_closed">未能连接到%1$s</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>
    <string name="loading">请稍候&#8230;</string>
    <string name="loading_pull_refresh">下拉刷新</string>
    <string name="loading_release_refresh">松开刷新</string>
    <string name="loading_loading">加载中&#8230;</string>
    <string name="loading_update_time">上次更新时间 </string>
    <string name="loading_load_more">加载更多</string>
    <string name="loading_strive_loading">奋力加载中&#8230;</string>
    <string name="loading_downloading">奋力下载中&#8230;&#8230;</string>
    <string name="loading_no_more">没有更多了</string>
    <string name="loading_no_data">暂无%1$s</string>
    <string name="loading_process">正在%1$s</string>
    <string name="loading_click_load">重新加载</string>
    <string name="loading_submit_fail">上载失败</string>
    <string name="main_tab_text_1">首页</string>
    <string name="main_tab_text_2">松小堡</string>
    <string name="main_tab_text_3">我的</string>
    <string name="main_head_tickets">门票购买</string>
    <string name="main_head_reserve">课程预订</string>
    <string name="main_head_title_cn">最新活动</string>
    <string name="main_head_title_en">LATEST ACTIVITY</string>
    <string name="mine_login">点击登录</string>
    <string name="mine_my_design">我的设计</string>
    <string name="mine_my_coupon">我的卡券</string>
    <string name="mine_my_sing_up">我的活动</string>
    <string name="mine_my_reserve">我的预约</string>
    <string name="mine_my_order">我的账单</string>
    <string name="mine_call">联系客服</string>
    <string name="mine_message">消息中心</string>
    <string name="mine_message_history">以下为历史消息</string>
    <string name="mine_sign_num">%1$d人已报名</string>
    <string name="mine_info">我的资料</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_nick">昵称</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_male">男</string>
    <string name="mine_gender_female">女</string>
    <string name="mine_gender_confidential">保密</string>
    <string name="mine_birthday">生日</string>
    <string name="mine_area">地区</string>
    <string name="mine_my_address">地址管理</string>
    <string name="mine_change_nick">修改昵称</string>
    <string name="mine_input_nick">请输入昵称</string>
    <string name="mine_change_gender">修改性别</string>
    <string name="mine_change_area">选择地区</string>
    <string name="mine_change_intro">修改签名</string>
    <string name="mine_intro">签名</string>
    <string name="mine_intro_hint">填写个性签名更容易获得别人的关注哦</string>
    <string name="reserve_now">立即预约</string>
    <string name="reserve_slot">预约时段：</string>
    <string name="reserve_place">课程地点：</string>
    <string name="reserve_suit">适用人群：</string>
    <string name="reserve_date">预约日期</string>
    <string name="reserve_date_item">预约日期：%1$s</string>
    <string name="reserve_time">预约时间</string>
    <string name="reserve_time_item">预约时间：%1$s</string>
    <string name="reserve_desc">课程介绍</string>
    <string name="reserve_desc_en">COURSE DESCRIPTION</string>
    <string name="reserve_choice">选择场次</string>
    <string name="reserve_qr_code">预约二维码</string>
    <string name="reserve_expired">已过期</string>
    <string name="reserve_cancelled">已核销</string>
    <string name="reserve_success">预约成功</string>
    <string name="reserve_success_can">预约成功（已核销）</string>
    <string name="reserve_success_end">预约成功（已过期）</string>
    <string name="choice_date">选择场次</string>
    <string name="choice_select_date">请选择日期</string>
    <string name="choice_select_time">请选择场次</string>
    <string name="choice_select_time_empty">此日期无可选场次</string>
    <string name="choice_select_option">可选场次</string>
    <string name="choice_select_option_en">OPTIONAL EVENTS</string>
    <string name="choice_reserve_yes">已预约</string>
    <string name="choice_reserve_ok">可预约</string>
    <string name="choice_reserve_no">已预满</string>
    <string name="sign_up_title">我要报名</string>
    <string name="sign_up_now">立即报名</string>
    <string name="sign_up_already">您已报名</string>
    <string name="sign_up_end">报名已截止</string>
    <string name="sign_up_success">报名成功</string>
    <string name="sign_up_success_end">报名成功（已过期）</string>
    <string name="sign_up_input_info">填写资料</string>
    <string name="sign_up_input_info_en">FILL IN INFORMATION</string>
    <string name="sign_up_explain">活动说明</string>
    <string name="sign_up_explain_en">ACTIVITY DESCRIPTION</string>
    <string name="sign_up_name">姓名：</string>
    <string name="sign_up_input_name">请输入姓名</string>
    <string name="sign_up_gender">性别：</string>
    <string name="sign_up_age">年龄：</string>
    <string name="sign_up_input_age">请选择年龄范围</string>
    <string name="sign_up_phone">手机：</string>
    <string name="sign_up_input_phone">请输入手机号码</string>
    <string name="sign_up_input_phone_error">请输入正确的11位数手机号码</string>
    <string name="sign_up_time">活动时间：</string>
    <string name="sign_up_address">活动地点：</string>
    <string name="sign_up_people">报名情况：</string>
    <string name="sign_up_info">活动信息</string>
    <string name="sign_up_info_time">%1$s 至 %2$s</string>
    <string name="sign_up_info_number">"已报名%1$d人/限%2$d人报名"</string>
    <string name="sign_up_cost_hint">费用为大赛统一报名费，主要用于场地租赁和组织等;</string>
    <string name="coupon_member_meal">会员套餐</string>
    <string name="coupon_member_meal_en">MEMBERS PACKAGE</string>
    <string name="coupon_discount">立省%1$s元</string>
    <string name="coupon_buy_now">立即购买</string>
    <string name="find_comment">评论</string>
    <string name="find_comment_participate">参与评论</string>
    <string name="find_comment_total">共%1$d条评论</string>
    <string name="find_comment_ok">评论已发布</string>
    <string name="find_comment_input">请输入评论内容</string>
    <string name="photo_select_title">选择相册</string>
    <string name="photo_select_one_title">选择一张照片</string>
    <string name="photo_select_no_data">没有检测到相片</string>
    <string name="photo_editor_title">相片编辑</string>
    <string name="photo_clip_head_title">头像裁剪</string>
    <string name="photo_clip_card_title">证件裁剪</string>
    <string name="photo_change_head">修改头像</string>
    <string name="photo_shoot_upload">拍照上传</string>
    <string name="photo_choose_upload">本地上传</string>
    <string name="photo_upload_img">正在上传%1$s，请稍后&#8230;</string>
    <string name="photo_upload_img_ok">上传%1$s成功</string>
    <string name="photo_img_url_error">%1$s出现错误！请重新编辑！</string>
    <string name="photo_upload_head_fail">上传头像失败！请点击头像重新上传！</string>
    <string name="photo_clip_error">裁剪相片时出现错误！请重新选择相片！</string>
    <string name="photo_ID_photo">身份证明相片</string>
    <string name="photo_ID_photo_null">身份证明相片不能为空</string>
    <string name="photo_upload_ID_fail">上传身份证明相片失败！请重新提交审核！</string>
    <string name="photo_show_save_one">保存1张</string>
    <string name="photo_show_save_more">保存%1$d张</string>
    <string name="photo_show_save_image">保存到手机</string>
    <string name="photo_show_save_ok">保存成功</string>
    <string name="photo_show_save_fail">保存图片出错！请检查SD卡是否正确安装或重试！</string>
    <string name="photo_save_sd_error">没有储存卡</string>
    <string name="photo_save_directory_error">没有找到储存目录</string>
    <string name="photo_scan_text_hint">将二维码放入框内, 即可自动扫描</string>
    <string name="photo_crop_image_instru">移动并缩放相片以符合空间大小</string>
    <string name="photo_camera_authority">您已禁用摄像头权限，请到设置或手机管家的权限管理中重新配置权限。</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_question">问题反馈</string>
    <string name="setting_version">检查更新</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_logout">退出帐户</string>
    <string name="setting_logout_confirm">&#160;确定要退出帐户么？</string>
    <string name="setting_close">关闭应用</string>
    <string name="setting_close_confirm">&#160;确定要关闭应用么？</string>
    <string name="setting_input_hint_feedback">写下您的意见或建议</string>
    <string name="setting_input_error_feedback">意见或建议不能为空~</string>
    <string name="setting_feedback_post_ok">提交成功^_^感谢您的宝贵意见^_^</string>
    <string name="login_login">登录账户</string>
    <string name="login_login_app">登录松小堡</string>
    <string name="login_phone_login">手机号一键登录</string>
    <string name="login_phone_password">手机号密码登录</string>
    <string name="login_phone_register">手机号快捷注册</string>
    <string name="login_quick">其它方式登录</string>
    <string name="login_treaty">登录即同意《松小堡用户协议》</string>
    <string name="share_qq">QQ</string>
    <string name="share_wx">微信</string>
    <string name="share_wb">微博</string>
</resources>