<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_app_bg_01">

    <ImageView
        android:id="@+id/login_iv_close"
        android:layout_width="@dimen/title_height"
        android:layout_height="@dimen/title_height"
        android:contentDescription="@string/desc"
        android:scaleType="center"
        android:src="@mipmap/icon_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login_app"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <Button
        android:id="@+id/login_btn_login"
        style="@style/register_button"
        android:text="@string/login_phone_login"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"/>

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone_register"
        android:textColor="@color/shows_text_color"
        android:textSize="@dimen/app_text_size_content"
        android:layout_marginTop="@dimen/margin_padding_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_padding_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_10"
                android:text="@string/login_quick"
                android:textColor="@color/shows_text_color"
                android:textSize="@dimen/app_text_size_small" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/screen_margin_default"
            android:paddingRight="@dimen/screen_margin_default">

            <TextView
                android:id="@+id/login_tv_wx"
                style="@style/common_tab_text_assist"
                android:drawablePadding="@dimen/margin_padding_10"
                android:drawableTop="@mipmap/login_icon_logo_wx"
                android:text="@string/share_wx" />

            <TextView
                android:id="@+id/login_tv_qq"
                style="@style/common_tab_text_assist"
                android:drawablePadding="@dimen/margin_padding_10"
                android:drawableTop="@mipmap/login_icon_logo_qq"
                android:text="@string/share_qq" />

            <TextView
                android:id="@+id/login_tv_wb"
                style="@style/common_tab_text_assist"
                android:drawablePadding="@dimen/margin_padding_10"
                android:drawableTop="@mipmap/login_icon_logo_wb"
                android:text="@string/share_wb" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_treaty"
            android:textColor="@color/shows_text_color"
            android:textSize="@dimen/app_text_size_small"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>