<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_app_bg_03"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/personal_rl_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/head_size_parent"
            android:background="@color/app_color_white">

            <TextView
                android:id="@+id/personal_tv_head_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_head" />

            <com.songbao.sxb.widgets.RoundImageView
                android:id="@+id/personal_iv_head"
                android:layout_width="@dimen/head_size_default"
                android:layout_height="@dimen/head_size_default"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/personal_tv_head_content"
                android:contentDescription="@string/desc"
                android:src="@drawable/icon_default_head"
                app:type="circle" />

            <TextView
                android:id="@+id/personal_tv_head_content"
                style="@style/setting_lay_text_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_rl_nick"
            style="@style/setting_lay_item"
            android:layout_marginTop="@dimen/margin_padding_10">

            <TextView
                android:id="@+id/personal_tv_nick_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_nick" />

            <TextView
                android:id="@+id/personal_tv_nick_content"
                style="@style/setting_lay_text_content" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/desc" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_rl_gender"
            style="@style/setting_lay_item">

            <TextView
                android:id="@+id/personal_tv_gender_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_gender" />

            <TextView
                android:id="@+id/personal_tv_gender_content"
                style="@style/setting_lay_text_content" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/desc" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_rl_birthday"
            style="@style/setting_lay_item">

            <TextView
                android:id="@+id/personal_tv_birthday_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_birthday" />

            <TextView
                android:id="@+id/personal_tv_birthday_content"
                style="@style/setting_lay_text_content" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/desc" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_rl_area"
            style="@style/setting_lay_item">

            <TextView
                android:id="@+id/personal_tv_area_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_area" />

            <TextView
                android:id="@+id/personal_tv_area_content"
                style="@style/setting_lay_text_content" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/desc" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_rl_intro"
            style="@style/setting_lay_item">

            <TextView
                android:id="@+id/personal_tv_intro_title"
                style="@style/setting_lay_text_title"
                android:text="@string/mine_intro" />

            <TextView
                android:id="@+id/personal_tv_intro_content"
                style="@style/setting_lay_text_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin_padding_10"
                android:layout_toRightOf="@+id/personal_tv_intro_title"
                android:hint="@string/mine_intro_hint"
                android:textColorHint="@color/input_hint_color"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>