<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_app"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >

        <FrameLayout
            android:id="@+id/main_fragment_fl_0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ui_bg_color_app"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_5" >

        <FrameLayout
            android:id="@+id/main_fragment_fl_1"
            style="@style/main_tab_frame" >

            <TextView
                android:id="@+id/main_fragment_tab_tv_1"
                style="@style/main_tab_text"
                android:layout_gravity="center_vertical"
                android:drawableTop="@drawable/selector_home_tab_1"
                android:text="@string/main_tab_text_1" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_fragment_fl_2"
            style="@style/main_tab_frame" >

            <TextView
                android:id="@+id/main_fragment_tab_tv_2"
                style="@style/main_tab_text"
                android:drawableTop="@drawable/selector_home_tab_2"
                android:text="@string/main_tab_text_2" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_fragment_fl_3"
            style="@style/main_tab_frame" >

            <TextView
                android:id="@+id/main_fragment_tab_tv_3"
                style="@style/main_tab_text"
                android:drawableTop="@drawable/selector_home_tab_3"
                android:text="@string/main_tab_text_3" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>