<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:openxu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_color_nut"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/screen_margin_default">

            <com.songbao.sxb.widgets.CustomCalendar
                android:id="@+id/choice_date_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                openxu:mCurrentBg="@color/app_color_greys"
                openxu:mCurrentBgDashPath="@array/customCalendar_currentDay"
                openxu:mCurrentBgStrokeWidth="1.5dip"

                openxu:mMonthRowL="@mipmap/icon_go_left"
                openxu:mMonthRowR="@mipmap/icon_go_right"
                openxu:mMonthRowSpac="@dimen/margin_padding_100"

                openxu:mMonthSpac="@dimen/margin_padding_20"
                openxu:mDayUpSpac="@dimen/margin_padding_10"
                openxu:mDayDnSpac="@dimen/margin_padding_10"

                openxu:mSelectBg="@color/app_color_orange"
                openxu:mSelectNot="@color/debar_text_color"
                openxu:mSelectRadius="@dimen/margin_padding_15"
                openxu:mSelectTextColor="@color/app_color_white"
                openxu:mSelectWeekTextColor="@color/app_color_orange"
                openxu:mTextColorDay="@color/app_color_black"
                openxu:mTextColorMonth="@color/app_color_black"

                openxu:mTextColorPreFinish="@color/app_color_orange"
                openxu:mTextColorPreNull="@color/debar_text_color"
                openxu:mTextColorPreUnFinish="@color/app_color_green"

                openxu:mTextColorWeek="@color/app_color_black"
                openxu:mTextSizeDay="@dimen/text_size_16"
                openxu:mTextSizeMonth="@dimen/text_size_18"
                openxu:mTextSizePre="@dimen/text_size_10"
                openxu:mTextSizeWeek="@dimen/text_size_16" />

            <ImageView
                style="@style/set_line_horizontal_bg"
                android:layout_marginTop="@dimen/margin_padding_10"
                android:contentDescription="@string/desc" />

            <TextView
                style="@style/detail_text"
                android:text="@string/choice_select_option" />

            <com.songbao.sxb.widgets.ScrollViewListView
                android:id="@+id/choice_date_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/choice_date_tv_confirm"
        style="@style/common_text_button"
        android:layout_width="match_parent"
        android:background="@color/ui_color_button"
        android:padding="@dimen/screen_margin_default"
        android:text="@string/confirm"
        android:textColor="@color/app_color_white" />

</LinearLayout>